syntax = "proto3";
package svc.admin;
option go_package = "microsvc/protocol/svc/adminpb";

/*
这个文件中定义的是admin本地实现的接口，这类接口通常是复杂的跨多个表的查询；
*/

//import "svc/giftpb/int.proto";
//import "svc/currencypb/int.proto";
import "svc/adminpb/common.proto";
//import "svc/userpb/int.proto";
import "svc/commonpb/user.proto";
import "svc/commonpb/common.proto";
import "svc/commonpb/enum.proto";
import "validator.proto";

message ListUserReq{
  AdminBaseReq base = 1;
  int64 search_uid = 2; // UID 精确匹配
  int64 search_nid = 3; // 靓号ID 精确匹配
  string search_nickname = 4; // 昵称 模糊匹配
  string search_phone = 5; // 手机号 模糊匹配
  common.PageArgs page = 6 [(validator.field).required = true];
  repeated common.Sort sort = 7; // 支持 uid nid sex created_at updated_at
}
message ListUserRes{
  repeated UserInfo list = 1;
  int64 total = 2;
}

message UserInfo {
  common.User user = 1; // 资料信息
  common.UserGold gold = 2; // 金币信息
  common.UserSignInLog last_sign_in_log = 3; // 登陆日志
  repeated common.UserPunish punish = 4; // 惩罚信息（仅含生效中的数据，可能有多条）
  common.UserTerminate terminate = 5; // 注销信息 TODO
}

message ListUserLastSignInLogsReq {
  AdminBaseReq base = 1;
  int64 uid = 2;
  int64 limit = 3 [(validator.field).int64 = {in: [10, 20]}];
}
message ListUserLastSignInLogsRes {
  repeated common.UserSignInLog list = 1;
  int64 total = 2;
}

message ListReviewTextReq{
  AdminBaseReq base = 1;
  int64 search_uid = 2;
  repeated common.ReviewStatus status_array = 3; // 筛选【当前状态】，默认传 [1,3]
  repeated common.BizType biz_type_array = 4; // 筛选【业务类型】
  int64 search_admin_uid = 6; // 筛选 【审核员id】
  int64 id = 7; // 主键id
  common.PageArgs page = 10 [(validator.field).required = true];
}
message ListReviewTextRes{
  repeated ReviewText list = 1;
  int64 total = 2;
}

message ReviewText{
  int64 id = 1;
  string text = 2;
  common.ReviewStatus status = 3;
  common.BizType biz_type = 4;
  int64 admin_uid = 6;
  string admin_name = 7;
  common.User user = 10;
}

message ListReviewImageReq{
  AdminBaseReq base = 1;
  int64 search_uid = 2;
  repeated common.ReviewStatus status_array = 3;
  repeated common.BizType biz_type_array = 4;
  int64 search_admin_uid = 6; // 审核员id
  int64 id = 7; // 主键id
  common.PageArgs page = 10 [(validator.field).required = true];
}
message ListReviewImageRes{
  repeated ReviewImage list = 1;
  int64 total = 2;
}

message ReviewImage{
  int64 id = 1;
  repeated string urls = 3;
  common.ReviewStatus status = 4;
  common.BizType biz_type = 5;
  int64 admin_uid = 6;
  string admin_name = 7;
  common.User user = 10;
}

message ListReviewVideoReq{
  AdminBaseReq base = 1;
  int64 search_uid = 2;
  repeated common.ReviewStatus status_array = 3;
  repeated common.BizType biz_type_array = 4;
  int64 search_admin_uid = 6; // 审核员id
  string th_task_id = 7; // 三方审核id
  int64 id = 8; // 主键id
  common.PageArgs page = 10 [(validator.field).required = true];
}
message ListReviewVideoRes{
  repeated ReviewVideo list = 1;
  int64 total = 2;
}

message ReviewVideo{
  int64 id = 1;
  int64 uid = 2;
  string url = 3;
  common.ReviewStatus status = 4;
  common.BizType biz_type = 5;
  int64 admin_uid = 6;
  string admin_name = 7;
  common.User user = 10;
}

message ListReviewAudioReq{
  AdminBaseReq base = 1;
  int64 search_uid = 2;
  repeated common.ReviewStatus status_array = 3;
  repeated common.BizType biz_type_array = 4;
  int64 search_admin_uid = 6; // 审核员id
  string th_task_id = 7; // 第三方审核任务id
  common.PageArgs page = 10 [(validator.field).required = true];
}
message ListReviewAudioRes{
  repeated ReviewAudio list = 1;
  int64 total = 2;
}

message ReviewAudio{
  int64 id = 1;
  int64 uid = 2;
  string url = 3;
  common.ReviewStatus status = 4;
  common.BizType biz_type = 5;
  int64 admin_uid = 6;
  string admin_name = 7;
  common.User user = 10;
}

message UpdateReviewStatusReq {
  AdminBaseReq base = 1;
  int64 id = 2;
  common.ReviewStatus status = 3;
  string note = 4; // 备注
  common.ReviewType type = 5;
}
message UpdateReviewStatusRes {}

message ConfigCenterAddReq{
  AdminBaseReq base = 1;
  common.ConfigItemCore item = 2;
  bool is_override = 3; // 存在则覆盖
}
message ConfigCenterAddRes{}

message ConfigCenterListReq{
  AdminBaseReq base = 1;
  string key = 2;
  string name = 3; // 模糊匹配
  common.PageArgs page = 4 [(validator.field).required = true];
}
message ConfigCenterListRes{
  repeated common.ConfigItem list = 1;
  int64 total = 2;
}

message ConfigCenterUpdateReq{
  AdminBaseReq base = 1;
  common.ConfigItemCore item = 2;
}
message ConfigCenterUpdateRes{}

message ConfigCenterDeleteReq{
  AdminBaseReq base = 1;
  string key = 2;
}
message ConfigCenterDeleteRes{}

message SwitchCenterAddReq {
  AdminBaseReq base = 1;
  common.SwitchItemCore core = 2;
}
message SwitchCenterAddRes {}

message SwitchCenterListReq {
  AdminBaseReq base = 1;
  string key = 2;
  string name = 3; // 模糊匹配
  common.PageArgs page = 4 [(validator.field).required = true];
}
message SwitchCenterListRes {
  repeated common.SwitchItem list = 1;
  int64 total = 2;
}

message SwitchCenterUpdateReq {
  AdminBaseReq base = 1;
  common.SwitchItemCore core = 2;
}
message SwitchCenterUpdateRes {}

message SwitchCenterDeleteReq {
  AdminBaseReq base = 1 [(validator.field).required = true];
  string key = 2 [(validator.field).string.pattern = "^[a-zA-Z0-9]+$"];
}
message SwitchCenterDeleteRes {}